ADD: coverage notebook

--- a/01_basics/01_additional_lecture_notes/4_Lecture_ForecastError.ipynb
+++ b/01_basics/01_additional_lecture_notes/4_Lecture_ForecastError.ipynb
@@ -230,7 +230,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7ff92c0ee5f0>"
+       "<matplotlib.legend.Legend at 0x7f6fc370b700>"
       ]
      },
      "execution_count": 10,
