--- a/06_neural_networks/feedforward/keras/autoregression_keras_part1_STUDENT.ipynb
+++ b/06_neural_networks/feedforward/keras/autoregression_keras_part1_STUDENT.ipynb
@@ -273,7 +273,7 @@
     "\n",
     "#### Try changing these parameters ###############\n",
     "N_EPOCHS = 100\n",
-    "WINDOW_SIZE = 12\n",
+    "WINDOW_SIZE = 14\n",
     "es = EarlyStopping(monitor='val_loss', patience=10)\n",
     "##################################################\n",
     "\n",
@@ -522,7 +522,7 @@
     "tf.random.set_seed(1234)\n",
     "\n",
     "N_EPOCHS = 100\n",
-    "WINDOW_SIZE = 12\n",
+    "WINDOW_SIZE = 14\n",
     "es = EarlyStopping(monitor='val_loss', patience=10)\n",
     "\n",
     "#preprocess time series training and test sets\n",
@@ -1101,7 +1101,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1115,7 +1115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
