--- a/00_prerequisites/1_Lecture_DateTimes.ipynb
+++ b/00_prerequisites/1_Lecture_DateTimes.ipynb
@@ -25,7 +25,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
@@ -351,7 +352,7 @@
        "               '2019-01-01 02:00:00', '2019-01-01 03:00:00',\n",
        "               '2019-01-01 04:00:00', '2019-01-01 05:00:00',\n",
        "               '2019-01-01 06:00:00'],\n",
-       "              dtype='datetime64[ns]', freq='H')"
+       "              dtype='datetime64[ns]', freq='h')"
       ]
      },
      "execution_count": 11,
@@ -469,7 +470,7 @@
     {
      "data": {
       "text/plain": [
-       "DatetimeIndex(['2019-07-11', '2019-07-12', '2019-07-13'], dtype='datetime64[ns]', freq=None)"
+       "DatetimeIndex(['2019-07-11', '2019-07-12', '2019-07-13'], dtype='datetime64[s]', freq=None)"
       ]
      },
      "execution_count": 15,
@@ -498,7 +499,7 @@
     {
      "data": {
       "text/plain": [
-       "DatetimeIndex(['2019-07-11', '2019-07-12', '2019-07-13'], dtype='datetime64[ns]', freq='D')"
+       "DatetimeIndex(['2019-07-11', '2019-07-12', '2019-07-13'], dtype='datetime64[s]', freq='D')"
       ]
      },
      "execution_count": 16,
@@ -521,7 +522,7 @@
     {
      "data": {
       "text/plain": [
-       "DatetimeIndex(['2019-07-11', '2019-07-12', '2019-07-13'], dtype='datetime64[ns]', freq='D')"
+       "DatetimeIndex(['2019-07-11', '2019-07-12', '2019-07-13'], dtype='datetime64[s]', freq='D')"
       ]
      },
      "execution_count": 17,
@@ -552,7 +553,7 @@
     {
      "data": {
       "text/plain": [
-       "Timestamp('2019-07-11 00:00:00', freq='D')"
+       "Timestamp('2019-07-11 00:00:00')"
       ]
      },
      "execution_count": 18,
@@ -572,7 +573,7 @@
     {
      "data": {
       "text/plain": [
-       "Timestamp('2019-07-13 00:00:00', freq='D')"
+       "Timestamp('2019-07-13 00:00:00')"
       ]
      },
      "execution_count": 19,
@@ -655,11 +656,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2018-01-01</th>\n",
-       "      <td>24</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-02</th>\n",
-       "      <td>33</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-03</th>\n",
@@ -667,11 +668,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-04</th>\n",
-       "      <td>21</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-05</th>\n",
-       "      <td>24</td>\n",
+       "      <td>21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -680,11 +681,11 @@
       "text/plain": [
        "            sales\n",
        "date             \n",
-       "2018-01-01     24\n",
-       "2018-01-02     33\n",
+       "2018-01-01     33\n",
+       "2018-01-02     30\n",
        "2018-01-03     24\n",
-       "2018-01-04     21\n",
-       "2018-01-05     24"
+       "2018-01-04     25\n",
+       "2018-01-05     21"
       ]
      },
      "execution_count": 21,
@@ -712,7 +713,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('data/example_data1.csv') # save to file"
+    "directory = './data'\n",
+    "if not os.path.exists(directory):\n",
+    "    os.makedirs(directory)\n",
+    "\n",
+    "df.to_csv('./data/example_data1.csv') # save to file"
    ]
   },
   {
@@ -796,11 +801,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2018-01-01</th>\n",
-       "      <td>24</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-02</th>\n",
-       "      <td>33</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-03</th>\n",
@@ -808,31 +813,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-04</th>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-05</th>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-06</th>\n",
-       "      <td>34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-07</th>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-08</th>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-01-09</th>\n",
+       "      <th>2018-01-05</th>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2018-01-06</th>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-07</th>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-08</th>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-09</th>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2018-01-10</th>\n",
-       "      <td>26</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -841,16 +846,16 @@
       "text/plain": [
        "            sales\n",
        "date             \n",
-       "2018-01-01     24\n",
-       "2018-01-02     33\n",
+       "2018-01-01     33\n",
+       "2018-01-02     30\n",
        "2018-01-03     24\n",
-       "2018-01-04     21\n",
-       "2018-01-05     24\n",
-       "2018-01-06     34\n",
-       "2018-01-07     39\n",
-       "2018-01-08     25\n",
-       "2018-01-09     21\n",
-       "2018-01-10     26"
+       "2018-01-04     25\n",
+       "2018-01-05     21\n",
+       "2018-01-06     27\n",
+       "2018-01-07     33\n",
+       "2018-01-08     34\n",
+       "2018-01-09     38\n",
+       "2018-01-10     34"
       ]
      },
      "execution_count": 25,
@@ -861,18 +866,11 @@
    "source": [
     "df.head(10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -886,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
