fix(nn): sliding_window now includes final window

--- a/06_neural_networks/feedforward/keras/autoregression_keras_part1_STUDENT.ipynb
+++ b/06_neural_networks/feedforward/keras/autoregression_keras_part1_STUDENT.ipynb
@@ -156,11 +156,16 @@
     "        array-like, array-like\n",
     "    \n",
     "        preprocessed X, preprocessed Y\n",
+    "\n",
+    "    Notes:\n",
+    "    -----\n",
+    "    Thanks for Pavel Loginovic MSc 2023/24 for spotting a bug in the loop\n",
+    "    (missing + 1).\n",
     "    '''\n",
     "    tabular_X = []\n",
     "    tabular_y = []\n",
     "    \n",
-    "    for i in range(0, len(train) - window_size - horizon):\n",
+    "    for i in range(0, len(train) - window_size - horizon + 1):\n",
     "        X_train = train[i:window_size+i]\n",
     "        y_train = train[i+window_size+horizon-1]\n",
     "        tabular_X.append(X_train)\n",
@@ -922,7 +927,7 @@
     "    tabular_X = []\n",
     "    tabular_y = []\n",
     "    \n",
-    "    for i in range(0, len(train) - window_size - horizon):\n",
+    "    for i in range(0, len(train) - window_size - horizon + 1):\n",
     "        ########### MODIFICATIONS NEEDED HERE ###########################\n",
     "        X_train = train[i:window_size+i]\n",
     "        y_train = train[i+window_size+horizon-1]\n",
