--- a/01_basics/01_practicals_notebooks/Practical_2.ipynb
+++ b/01_basics/01_practicals_notebooks/Practical_2.ipynb
@@ -207,7 +207,7 @@
     "\n",
     "for train_fold, test_fold in cv_rolling:\n",
     "    model.fit(train)\n",
-    "    preds = model.predict(horizon)\n",
+    "    preds = model.predict(horizon=2)\n",
     "    score = mean_absolute_error(test_fold, preds)\n",
     "    scores.append(score)\n",
     "     \n",
@@ -424,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
