--- a/02_arima/arima_exercises_SOLUTIONS.ipynb
+++ b/02_arima/arima_exercises_SOLUTIONS.ipynb
@@ -191,8 +191,7 @@
    "outputs": [],
    "source": [
     "# example solution\n",
-    "ed_reattends = pd.read_csv(url, parse_dates=True, \n",
-    "                            dayfirst=True, index_col='date')\n",
+    "ed_reattends = pd.read_csv(url, parse_dates=True,, index_col='date')\n",
     "\n",
     "ed_reattends.index.freq = 'MS'\n",
     "\n",
@@ -655,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
