fix(arima): removed pmdarima for google colab installs

--- a/02_arima/arima_exercises.ipynb
+++ b/02_arima/arima_exercises.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "# if running in Google Colab install pdmarima\n",
     "if 'google.colab' in sys.modules:\n",
-    "    !pip install pmdarima==1.6.0"
+    "    !pip install pmdarima"
    ]
   },
   {
@@ -485,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
