--- a/02_arima/arima_exercises_SOLUTIONS.ipynb
+++ b/02_arima/arima_exercises_SOLUTIONS.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "# if running in Google Colab install pdmarima\n",
     "if 'google.colab' in sys.modules:\n",
-    "    !pip install pmdarima==1.6.0"
+    "    !pip install pmdarima"
    ]
   },
   {
