feat(lab1): added formatting to learning obj

--- a/01_basics/01_practicals_notebooks/Practical_1_SOLUTIONS.ipynb
+++ b/01_basics/01_practicals_notebooks/Practical_1_SOLUTIONS.ipynb
@@ -8,13 +8,14 @@
     "\n",
     "In any forecasting study the first thing you need to do is create a naive benchmark.  We can use naive benchmarks as simple methods for producing forecasting or as a way to check that the more complicated models we will use later the course are worth the effort to use/maintain.\n",
     "\n",
-    "**In this practical will apply our knowledge in**\n",
+    "🎓 **In this practical will apply our knowledge in**\n",
     "\n",
-    "* Creating baseline naive forecasts\n",
-    "* Performing a train-test split\n",
-    "* Using forecast error metrics MAE and MAPE to select the best method \n",
-    "* Producing prediction intervals for naive methods\n",
-    "* Analysing prediction intervals as part of model comparison.\n",
+    "* ✅ Creating baseline naive forecasts\n",
+    "* ✅ Performing a train-test split\n",
+    "* ✅ Using forecast error metrics MAE and MAPE to select the best method \n",
+    "* ✅ Producing prediction intervals for naive methods\n",
+    "* ✅ Analysing prediction intervals using formal metrics as part of model comparison.\n",
+    "* 🎁 **Bonus**: visualising time series with `forecast-tools` \n",
     "\n",
     "---\n",
     "**Before attempting the exercises, it is recommended that you watch the following code along tutorials that describes how to use python for basic forecasting**.\n",
