--- a/01_basics/01_practicals_notebooks/Practical_1_SOLUTIONS.ipynb
+++ b/01_basics/01_practicals_notebooks/Practical_1_SOLUTIONS.ipynb
@@ -47,6 +47,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from numpy.typing import ArrayLike\n",
     "import sys"
    ]
   },
@@ -105,7 +107,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Helper functions"
+    "# Helper functions\n",
+    "\n",
+    "The naive forecasting methods generate forecasts and prediction intervals in a `np.ndarray`.  For convenience I have included two two helper functions to convert these arrary to a `pd.DataFrame` with a `DateTimeIndex`. This is helpful for plotting where the date is needed.\n",
+    "\n",
+    "> You are free to use these functions in your own work."
    ]
   },
   {
@@ -114,25 +120,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preds_as_series(data, preds):\n",
+    "def preds_as_series(data: ArrayLike, preds: np.ndarray) -> pd.DataFrame:\n",
     "    '''\n",
     "    Helper function for plotting predictions.\n",
-    "    Converts a numpy array of predictions to a \n",
+    "    \n",
+    "    Converts a 1D numpy array of predictions to a \n",
     "    pandas.DataFrame with datetimeindex\n",
     "    \n",
     "    Parameters\n",
-    "    -----\n",
-    "    data - arraylike - the training data\n",
-    "    preds - numpy.array, vector of predictions \n",
+    "    -----------\n",
+    "    data: arraylike\n",
+    "        The training data\n",
+    "    preds: np.array\n",
+    "        Vector of predictions \n",
     "    \n",
     "    Returns:\n",
     "    -------\n",
     "    pandas.DataFrame\n",
     "    '''\n",
-    "    start = pd.date_range(start=data.index.max(), periods=2, \n",
-    "                          freq=data.index.freq).max()\n",
+    "    start = pd.date_range(\n",
+    "        start=data.index.max(), \n",
+    "        periods=2, \n",
+    "        freq=data.index.freq\n",
+    "    ).max()\n",
+    "    \n",
     "    idx = pd.date_range(start=start, periods=len(preds), freq=data.index.freq)\n",
     "    return pd.DataFrame(preds, index=idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def intervals_as_dataframe(\n",
+    "    intervals: np.ndarray, \n",
+    "    test: pd.DataFrame\n",
+    ") -> pd.DataFrame:\n",
+    "    '''\n",
+    "    Helper function for plotting predictions.\n",
+    "    \n",
+    "    Converts 2D numpy array containing prediction intervals to a \n",
+    "    pandas.DataFrame with datetimeindex.\n",
+    "\n",
+    "    Parameters:\n",
+    "    ----------\n",
+    "    intervals: np.ndarray \n",
+    "        matrix of prediction intervals\n",
+    "\n",
+    "    test: pd.DataFrame\n",
+    "        test in a dataframe format. This is passed to extract the datetimeindex\n",
+    "        to use in the new intervals dataframe.\n",
+    "    '''\n",
+    "    formatted_intervals = pd.DataFrame(\n",
+    "        intervals, \n",
+    "        index=test.index, \n",
+    "        columns=[\"lower\", \"upper\"]\n",
+    "    )\n",
+    "\n",
+    "    return formatted_intervals"
    ]
   },
   {
@@ -156,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +344,7 @@
        "<Axes: xlabel='date'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -330,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +537,7 @@
        "(37,)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +557,7 @@
        "(6,)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -771,23 +818,24 @@
        "2017-10-01   20.1   40.8"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# cast 80% intervals array to dataframe and name columns\n",
-    "intervals_80 = pd.DataFrame(\n",
-    "    y_intervals[0], index=test.index, columns=[\"lower\", \"upper\"]\n",
-    ")\n",
+    "intervals_80 = intervals_as_dataframe(y_intervals[0], test)\n",
+    "# intervals_80 = pd.DataFrame(\n",
+    "#     y_intervals[0], index=test.index, columns=[\"lower\", \"upper\"]\n",
+    "# )\n",
     "\n",
     "intervals_80.round(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -866,16 +914,17 @@
        "2017-10-01   14.6   46.3"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# cast 80% intervals array to dataframe and name columns\n",
-    "intervals_95 = pd.DataFrame(\n",
-    "    y_intervals[1], index=test.index, columns=[\"lower\", \"upper\"]\n",
-    ")\n",
+    "intervals_95 = intervals_as_dataframe(y_intervals[1], test)\n",
+    "# intervals_95 = pd.DataFrame(\n",
+    "#     y_intervals[1], index=test.index, columns=[\"lower\", \"upper\"]\n",
+    "# )\n",
     "\n",
     "intervals_95.round(1)"
    ]
@@ -891,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +1019,7 @@
        "2017-10-01   29.5   39.3"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1122,7 @@
        "2017-10-01   26.9   41.9"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2124,7 +2173,7 @@
        "data": [
         {
          "line": {
-          "color": "#0072B2"
+          "color": "#9966FF"
          },
          "mode": "lines",
          "name": "Training Data",
@@ -2196,7 +2245,7 @@
         },
         {
          "fill": "tonexty",
-         "fillcolor": "rgba(255, 0, 0, 0.15)",
+         "fillcolor": "rgba(0, 128, 0, 0.15)",
          "line": {
           "width": 0
          },
@@ -2240,7 +2289,7 @@
         },
         {
          "fill": "tonexty",
-         "fillcolor": "rgba(255, 0, 0, 0.21)",
+         "fillcolor": "rgba(0, 128, 0, 0.21)",
          "line": {
           "width": 0
          },
@@ -2263,7 +2312,7 @@
         },
         {
          "line": {
-          "color": "#FF0000",
+          "color": "#008000",
           "dash": "dash"
          },
          "mode": "lines",
@@ -3126,6 +3175,7 @@
     "    forecast = pd.DataFrame(y_preds2, index=test.index),\n",
     "    prediction_intervals = {\"95% PI\": intervals2_95, \"80% PI\": intervals2_80},\n",
     "    y_axis_label=\"Reattendances\",\n",
+    "    color_scheme='green'\n",
     ")"
    ]
   },
@@ -3142,7 +3192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3155,6 +3205,7 @@
     }
    ],
    "source": [
+    "# Winkler score\n",
     "winkler_1 = winkler_score(y_true=test, intervals=y_intervals[0], alpha=0.2)\n",
     "winkler_2 = winkler_score(y_true=test, intervals=y_intervals2[0], alpha=0.2)\n",
     "print(round(winkler_1, 2))\n",
@@ -3163,7 +3214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3176,15 +3227,23 @@
     }
    ],
    "source": [
-    "coverage_diff1 = absolute_coverage_difference(y_true=test, intervals=y_intervals[0])\n",
-    "coverage_diff2 = absolute_coverage_difference(y_true=test, intervals=y_intervals2[0])\n",
+    "# absolute coverage difference\n",
+    "coverage_diff1 = absolute_coverage_difference(\n",
+    "    y_true=test, \n",
+    "    intervals=y_intervals[0]\n",
+    ")\n",
+    "coverage_diff2 = absolute_coverage_difference(\n",
+    "    y_true=test, \n",
+    "    intervals=y_intervals2[0]\n",
+    ")\n",
+    "\n",
     "print(round(coverage_diff1, 2))\n",
     "print(round(coverage_diff2, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3197,6 +3256,8 @@
     }
    ],
    "source": [
+    "# empirical coverage\n",
+    "\n",
     "cover1 = coverage(y_true=test, pred_intervals=y_intervals[0])\n",
     "cover2 = coverage(y_true=test, pred_intervals=y_intervals2[0])\n",
     "print(round(cover1, 2))\n",
