deat(lab1): added defs of int scores

--- a/01_basics/01_practicals_notebooks/Practical_1_SOLUTIONS.ipynb
+++ b/01_basics/01_practicals_notebooks/Practical_1_SOLUTIONS.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standard Imports"
+    "## Standard Imports"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Install forecast-tools"
+    "## `Install forecast-tools`"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# forecast-tools imports"
+    "## `forecast-tools` imports"
    ]
   },
   {
@@ -107,11 +107,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Helper functions\n",
+    "## Helper functions\n",
     "\n",
     "The naive forecasting methods generate forecasts and prediction intervals in a `np.ndarray`.  For convenience I have included two two helper functions to convert these arrary to a `pd.DataFrame` with a `DateTimeIndex`. This is helpful for plotting where the date is needed.\n",
     "\n",
-    "> You are free to use these functions in your own work."
+    "> 🎓 You are free to use these functions in your own work."
    ]
   },
   {
@@ -418,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2. Choose the best baseline forecast method for ED reattendances"
+    "## Exercise 2. Choose the best baseline forecast method for ED reattendances using point forecasts"
    ]
   },
   {
@@ -502,7 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here ..."
+    "# our code here ..."
    ]
   },
   {
@@ -511,7 +511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#train test split\n",
+    "# train test split\n",
     "train = reattend_rate.iloc[:-6]\n",
     "test = reattend_rate.iloc[-6:]"
    ]
@@ -707,7 +707,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Step 8: Produce 80 and 95% prediction intervals for the model 1.**\n",
+    "## Exercise 3: Evaluate prediction intervals\n",
+    "\n",
+    "The evaluation of a forecasting model can be enhanced by analysing prediction intervals.  You can do this visually or if you are conducting a more rigourous analysis using formal interval scores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 1: Produce 80 and 95% prediction intervals for the model 1.**\n",
     "\n",
     "To obtain the prediction intervals we need to set the `return_predict_int` parameters of the `predict` function to `True`. E.g. \n",
     "\n",
@@ -983,7 +992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Step 9: Produce 80 and 95% prediction intervals for the model 2**"
+    "**Step 2: Produce 80 and 95% prediction intervals for the model 2**"
    ]
   },
   {
@@ -1185,7 +1194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Step 10: Visualise the prediction intervals for both models**\n",
+    "**Step 3: Visualise the prediction intervals for both models**\n",
     "\n",
     "This is only practical when you have a small number of time series and models. \n",
     "\n",
@@ -3259,14 +3268,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Step 11: Calculate prediction interval metrics for 80% intervals**\n",
+    "**Step 4: Calculate prediction interval scores for 80% intervals**\n",
     "\n",
     "* Here we will calculate the Winkler score, absolute coverage difference, and empirical coverage\n",
     "* Do the results alter your decision?\n",
     "* Which measure(s) were the most useful for this time series?\n",
     "\n",
     "\n",
-    "💡 **In a formal lab report consider producing a formatted table all metrics (point forecasts and prediction intervals) using pandas.**"
+    "💡 **In a formal lab report consider producing a formatted table all metrics (point forecasts and prediction intervals) using pandas.**\n",
+    "\n",
+    "> Also see: `forecast-tools` [documentation](https://tommonks.github.io/forecast-tools/content/02a_coverage_metrics.html)\n",
+    "\n",
+    "**Empirical Coverage**\n",
+    "\n",
+    "A simple way provide a score to a prediction interval is to quantify its empirical coverage of a test set. I.e. the percentage of points that fall within the interval.  For a 80% interval you aims for 80% of the points to fall within it."
    ]
   },
   {
@@ -3278,32 +3293,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Winker Score:\n",
-      "Naive 1: 15.29\n",
-      "SNaive: 36.56\n"
+      "Empirical Coverage\n",
+      "1.0\n",
+      "0.33\n"
      ]
     }
    ],
    "source": [
-    "# Winkler score\n",
+    "# empirical coverage\n",
     "\n",
-    "# Naive1\n",
-    "winkler_naive1 = winkler_score(\n",
-    "    y_true=test, \n",
-    "    intervals=intervals_naive1[0], \n",
-    "    alpha=0.2\n",
-    ")\n",
+    "cover_naive1 = coverage(y_true=test, pred_intervals=intervals_naive1[0])\n",
+    "cover_snaive = coverage(y_true=test, pred_intervals=intervals_snaive[0])\n",
     "\n",
-    "# SNaive\n",
-    "winkler_snaive = winkler_score(\n",
-    "    y_true=test, \n",
-    "    intervals=intervals_snaive[0], \n",
-    "    alpha=0.2\n",
-    ")\n",
+    "print(\"Empirical Coverage\")\n",
+    "print(round(cover_naive1, 2))\n",
+    "print(round(cover_snaive, 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Absolute Coverage Difference (ACD)**\n",
     "\n",
-    "print(\"Winker Score:\")\n",
-    "print(f\"Naive 1: {round(winkler_naive1, 2)}\")\n",
-    "print(f\"SNaive: {round(winkler_snaive, 2)}\")"
+    "The absolute coverage difference is the absolute difference between empirical coverage and the target coverage level.\n",
+    "\n",
+    "For example if the average coverage is 83% and the target is a 95% coverage then the absolute coverage difference is\n",
+    "\n",
+    "$|0.83 - 0.95| = 0.12$\n",
+    "\n",
+    "**Smaller ACD scores are better.**\n",
+    "\n",
+    "Use the `forecast_tools.metrics.absolute_coverage_difference` function to calculate the ACD."
    ]
   },
   {
@@ -3341,6 +3362,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Winkler score**\n",
+    "\n",
+    "A Winkler score is the width of the prediction interval plus a penalty proportional to the deviation (above or below the interval) and 2/$\\alpha$\n",
+    "\n",
+    "The Winkler score is defined as\n",
+    "\n",
+    "$$W_{\\alpha,t} = \\begin{cases}\n",
+    "  (u_{\\alpha,t} - \\ell_{\\alpha,t}) + \\frac{2}{\\alpha} (\\ell_{\\alpha,t} - y_t) & \\text{if } y_t < \\ell_{\\alpha,t} \\\\\n",
+    "  (u_{\\alpha,t} - \\ell_{\\alpha,t})   & \\text{if }  \\ell_{\\alpha,t} \\le y_t \\le u_{\\alpha,t} \\\\\n",
+    "  (u_{\\alpha,t} - \\ell_{\\alpha,t}) + \\frac{2}{\\alpha} (y_t - u_{\\alpha,t}) & \\text{if } y_t > u_{\\alpha,t}.\n",
+    "  \\end{cases}$$\n",
+    "  \n",
+    "  \n",
+    "Where \n",
+    "\n",
+    "* $u_{\\alpha, t}$ is the upper prediction interval value for $\\alpha$ and horizon $t$\n",
+    "* $l_{\\alpha, t}$ is the lower prediction interval value for $\\alpha$ and horizon $t$\n",
+    "* $y_t$ is the ground truth observation at horizon $t$\n",
+    "\n",
+    "**smaller winkler scores are better!**\n",
+    "\n",
+    "You can use `forecast_tools.metrics.winkler_score` to calculate it. For example:\n",
+    "\n",
+    "```python\n",
+    "# test = test data\n",
+    "# intervals_naive1[0] = array of 80% prediction intervals\n",
+    "# alpha = 0.2 for a 80% prediction interval and 0.05 for a 95% prediction interval.\n",
+    "winkler_naive1 = winkler_score(\n",
+    "    y_true=test, \n",
+    "    intervals=intervals_naive1[0], \n",
+    "    alpha=0.2\n",
+    ")\n",
+    "```\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
@@ -3349,21 +3409,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empirical Coverage\n",
-      "1.0\n",
-      "0.33\n"
+      "Winker Score:\n",
+      "Naive 1: 15.29\n",
+      "SNaive: 36.56\n"
      ]
     }
    ],
    "source": [
-    "# empirical coverage\n",
+    "# Winkler score\n",
     "\n",
-    "cover_naive1 = coverage(y_true=test, pred_intervals=intervals_naive1[0])\n",
-    "cover_snaive = coverage(y_true=test, pred_intervals=intervals_snaive[0])\n",
+    "# Naive1\n",
+    "winkler_naive1 = winkler_score(\n",
+    "    y_true=test, \n",
+    "    intervals=intervals_naive1[0], \n",
+    "    alpha=0.2\n",
+    ")\n",
     "\n",
-    "print(\"Empirical Coverage\")\n",
-    "print(round(cover_naive1, 2))\n",
-    "print(round(cover_snaive, 2))"
+    "# SNaive\n",
+    "winkler_snaive = winkler_score(\n",
+    "    y_true=test, \n",
+    "    intervals=intervals_snaive[0], \n",
+    "    alpha=0.2\n",
+    ")\n",
+    "\n",
+    "print(\"Winker Score:\")\n",
+    "print(f\"Naive 1: {round(winkler_naive1, 2)}\")\n",
+    "print(f\"SNaive: {round(winkler_snaive, 2)}\")"
    ]
   },
   {
