feat(lab5): higher lr for simple network. student + solution copy

--- a/05_neural_networks/feedforward/keras/autoregression_keras_part1_STUDENT.ipynb
+++ b/05_neural_networks/feedforward/keras/autoregression_keras_part1_STUDENT.ipynb
@@ -539,8 +539,10 @@
     "X_train, X_test = X_train[:training_length], X_train[training_length:]\n",
     "y_train, y_test = y_train[:training_length], y_train[training_length:]\n",
     "\n",
-    "#compile the tf model\n",
-    "model = get_linear_model(WINDOW_SIZE, metrics=['mse'], lr=0.001)\n",
+    "# compile the tf model\n",
+    "# 2026 note: if you find that the model is unstable try a higher learning rate \n",
+    "# e.g. 0.1\n",
+    "model = get_linear_model(WINDOW_SIZE, metrics=['mse'], lr=0.01)\n",
     "\n",
     "#fit model silently\n",
     "results = model.fit(x=X_train, \n",
@@ -1120,7 +1122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
