--- a/05_neural_networks/feedforward/keras/autoregression_keras_part2_STUDENT.ipynb
+++ b/05_neural_networks/feedforward/keras/autoregression_keras_part2_STUDENT.ipynb
@@ -569,7 +569,7 @@
     "    Load the pre-trained ensemble models (only use if they exist!)\n",
     "    '''\n",
     "    models = []\n",
-    "    url = '/input'\n",
+    "    url = './input'\n",
     "    for n in range(n_models):\n",
     "        model_n = tf.keras.models.load_model(f'{url}/ensemble_model_{n}.h5')\n",
     "        models.append(model_n)\n",
@@ -808,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
